test/compile_errors/err_no_std_regex_requires_std.w
//! args: --no-std
//! expect-check-fail: regex literals require std

@[panic_handler]
fn on_panic -> Never: unreachable()

@[entry]
fn start -> i32:
    let _ = /abc/
    0
